--- a/todo/bin/main/templates/home.html
+++ b/todo/bin/main/templates/home.html
@@ -24,7 +24,7 @@
     			<!-- th:attr="data-attach-no=${attach.attachNo}"> -->
     			<td th:text="${attachStatus.count}">번호(Status의 count 사용)</td>
     			<td>
-    				<a th:onclick="|location.href='@{/s3/download/{id}(id=${attach.attachNo})}'|"
+    				<a th:onclick="|location.href='@{/download/{id}(id=${attach.attachNo})}'|"
     				    th:text="${attach.oriName}">
     					파일명
     				</a>
@@ -66,7 +66,7 @@
             
             const createFilePayload = new FormData(createFileForm);
             // 바꾸고 service,controller
-            fetch("/s3/upload", {
+            fetch("/attach/create", {
                 method: "POST",
                 body: createFilePayload
             })
@@ -80,7 +80,7 @@
         });
         
         // 삭제 코드 (2025-03-31)
-        function deleteFile(id){
+/*         function deleteFile(id){
         	if(!confirm("정말로 삭제하시겠습니까?"))
 				console.log("삭제");
         	fetch("/s3/delete/${id}",{
@@ -93,7 +93,7 @@
         			location.reload();
         		}
         	});
-        }
+        } */
 /* 
         function deleteFile(fileId) {
             fetch(`/attach/delete/${fileId}`, {
